--- a/index.html
+++ b/index.html
@@ -118,6 +118,19 @@
                 </a>
             </div>
             <div class="w3-display-container mySlides">
+                <img src="images/liribot.jpg" style="width:100%">
+                <a href="https://verolozada.github.io/liri-node-app/" target="_blank">
+                    <div class="w3-display w3-large w3-container w3-padding-16 w3-gray caption">
+                        Liri App - CLI Application
+                    </div>
+                </a>
+                <a href="https://github.com/verolozada/liri-node-app" target="_blank">
+                    <div class="w3-display-topright w3-large w3-container w3-padding-16 w3-gray">
+                        GitHub Repo
+                    </div>
+                </a>
+            </div>
+            <div class="w3-display-container mySlides">
                 <img src="images/marvel.jpg" style="width:100%">
                 <a href="https://verolozada.github.io/TriviaGame/" target="_blank">
                     <div class="w3-display w3-large w3-container w3-padding-16 w3-gray caption">
