Friend Finder added

--- a/index.html
+++ b/index.html
@@ -131,6 +131,19 @@
                 </a>
             </div>
             <div class="w3-display-container mySlides">
+                <img src="images/friendMatch.jpeg" style="width:100%">
+                <a href="https://find-a-friend-201808.herokuapp.com/" target="_blank">
+                    <div class="w3-display w3-large w3-container w3-padding-16 w3-gray caption">
+                        Friend Finder
+                    </div>
+                </a>
+                <a href="https://github.com/verolozada/FriendFinder" target="_blank">
+                    <div class="w3-display-topright w3-large w3-container w3-padding-16 w3-gray">
+                        GitHub Repo
+                    </div>
+                </a>
+            </div>
+            <div class="w3-display-container mySlides">
                 <img src="images/marvel.jpg" style="width:100%">
                 <a href="https://verolozada.github.io/TriviaGame/" target="_blank">
                     <div class="w3-display w3-large w3-container w3-padding-16 w3-gray caption">
@@ -174,7 +187,7 @@
                         <i class="fab fa-linkedin fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> LinkedIn
                     </a>
                     <br>
-                    <a href="https://github.com/verolozada" target="_blank" >
+                    <a href="https://github.com/verolozada" target="_blank">
                         <i class="fab fa-github fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> GitHub
                     </a>
                 </div>
