--- a/index.html
+++ b/index.html
@@ -92,6 +92,19 @@
                 </a>
             </div>
             <div class="w3-display-container mySlides">
+                <img src="images/inspire.png" style="width:100%">
+                <a href="https://inspireforgood.herokuapp.com/" target="_blank">
+                    <div class="w3-display w3-large w3-container w3-padding-16 w3-gray caption">
+                        Inspire 
+                    </div>
+                </a>
+                <a href="https://github.com/verolozada/Inspire" target="_blank">
+                    <div class="w3-display-topright w3-large w3-container w3-padding-16 w3-gray">
+                        GitHub Repo
+                    </div>
+                </a>
+            </div>
+            <div class="w3-display-container mySlides">
                 <img src="images/train.jpg" style="width:100%">
                 <a href="https://verolozada.github.io/TrainSchedule/" target="_blank">
                     <div class="w3-display w3-large w3-container w3-padding-16 w3-gray caption">
