--- a/app/public/index.html
+++ b/app/public/index.html
@@ -51,12 +51,13 @@
                 <img src="images/img.jpg" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Photo of Me" width="500" height="333">
             </div>
             <div class="w3-col m6 w3-padding-large">
-                <p>My name is Veronica Lozada, I'm 22 years old. I'm from Caracas, Venezuela and I recently moved to Atlanta
-                    looking for personal and professional growth and to have new experiences in life. I just graduated from
-                    Industrial Engineering at the Universidad Simon Bolivar located in Caracas. I had the opportunity to
-                    live in Barcelona for a year as an exchange student and has been one of the best experiences in my life,
-                    getting to know people from all over the world and to experience a different culture than mine. I love
-                    to travel and meet new places everytime I can. Currently I'm a Georgia Tech Full Stack Developer Student</p>
+                <p>Full Stack Developer and Industrial Engineer graduate, passionate to learn something new everytime it is
+                    possible. Love traveling to meet new people, get to known new cultures and places. My skills are broad:
+                    front-end and backend development. <br><br>
+                    <h4>Technical Skills:</h4>
+                    <p>React, React-Native, JavaScript, HTML5, CSS3, Git, Node Js, Materialize, Bootstrap, APIs, Firebase, MySQL,
+                        AJAX, REST, MongoDB, jQuery, C, R, SCRUM, Microsoft Office.</p>
+                </p>
             </div>
         </div>
     </div>
@@ -194,7 +195,7 @@
             <div class="w3-col m7 w3-panel">
                 <div class="w3-large w3-margin-bottom">
                     <br>
-                    <i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Email: verolozada12@gmail.com
+                    <i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> v.lozadalopez@gmail.com
                     <br>
                     <a href="https://www.linkedin.com/in/veronica-lozada-314354b7/" target="_blank">
                         <i class="fab fa-linkedin fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> LinkedIn
@@ -213,7 +214,7 @@
         <a href="#home" class="w3-button w3-light-grey">
             <i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
     </footer>
-    
+
     <script src="javascript/javascript.js"></script>
 </body>
 
