--- a/app/public/index.html
+++ b/app/public/index.html
@@ -51,9 +51,11 @@
                 <img src="images/img.jpg" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Photo of Me" width="500" height="333">
             </div>
             <div class="w3-col m6 w3-padding-large">
-                <p>Full Stack Developer and Industrial Engineer graduate, passionate to learn something new everytime it is
-                    possible. Love traveling to meet new people, get to known new cultures and places. My skills are broad:
-                    front-end and backend development. <br><br>
+                <p>Full Stack Developer and Industrial Engineer graduate, passionate to learn something new every time.
+                    Love traveling to meet new people, get to known new cultures and places. My skills are broad: front-end
+                    and backend development.
+                    <br>
+                    <br>
                     <h4>Technical Skills:</h4>
                     <p>React, React-Native, JavaScript, HTML5, CSS3, Git, Node Js, Materialize, Bootstrap, APIs, Firebase, MySQL,
                         AJAX, REST, MongoDB, jQuery, C, R, SCRUM, Microsoft Office.</p>
